fix connect websocket